--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.3.2
   scrollable_positioned_list: ^0.3.8
+  firebase_messaging: ^15.1.3
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
